<resources>
    <string name="app_name">Repos project</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>


    <string name="asset">Asset</string>
    <string name="orders">Orders</string>
    <string name="history">History</string>
    <string name="profile">Profile</string>
    <string name="full_name">Full Name</string>
    <string name="phone">Phone</string>
    <string name="login">login</string>
    <string name="next">Next</string>
    <string name="company_name">Company Name</string>
    <string name="official_email_address">Official Email Address</string>
    <string name="industry_type">Industry Type</string>
    <string name="submit">Submit</string>
    <string name="forget_password">Forget password?</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_in">Log in</string>
    <string name="email_address">Email Address</string>
    <string name="enter_password">Enter password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="i_have_read_the_privacy_policy">I have read the privacy policy</string>
    <string name="add_company_details">Add Company Details</string>
    <string name="email">email</string>
    <string name="profile2">Profile</string>
    <string name="update_profile">Update Profile</string>
    <string name="report_an_issue">Report an Issue</string>
    <string name="log_out">Log Out</string>
    <string name="support_reposenergy_com">Support@reposenergy.com</string>
    <string name="order2">Order</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_with_otp">Login with otp</string>
    <string name="enter_your_number">Enter your number</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="company_name2">Company Name</string>
    <string name="update_name2">Update Name</string>
    <string name="update_password">Update Password</string>

    <string name="update">Update</string>
    <string name="update_name">Update_name</string>
    <string name="update_email">Update Email</string>
    <string name="update_company_name">Update Company Name</string>
    <string name="update_phone_number">Update Phone Number</string>
    <string name="update_industry_type">Update Industry Type</string>
    <string name="update_official_email">Update Official Email</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="add_more">Add More</string>
</resources>