<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/dashboard"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_dashboard" />

    <item
        android:id="@+id/asset"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/asset" />

    <item
        android:id="@+id/orders"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/orders" />

    <item
        android:id="@+id/history"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/history" />

    <item
        android:id="@+id/profile"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/profile" />

</menu>