<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/dashboard"
        android:name="com.dgdgjfm.l.reposproject.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/asset"
        android:name="com.dgdgjfm.l.reposproject.ui.asset.AssetFragment"
        android:label="@string/asset"
        tools:layout="@layout/fragment_asset" />

    <fragment
        android:id="@+id/orders"
        android:name="com.dgdgjfm.l.reposproject.ui.orders.OrdersFragment"
        android:label="@string/orders"
        tools:layout="@layout/fragment_orders" />

    <fragment
        android:id="@+id/history"
        android:name="com.dgdgjfm.l.reposproject.ui.history.HistoryFragment"
        android:label="@string/history"
        tools:layout="@layout/fragment_history" />

    <fragment
        android:id="@+id/profile"
        android:name="com.dgdgjfm.l.reposproject.ui.profile.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />
</navigation>