<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginTop="30dp"
    android:layout_marginRight="30dp"
    android:layout_marginLeft="30dp"
    android:layout_marginBottom="30dp">

    <TextView
        android:id="@+id/profile_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profile2"
        android:textSize="40sp"
        android:textStyle="bold"
        android:gravity="center"/>

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/profile"
        android:layout_marginTop="10dp"/>

    <EditText
        android:id="@+id/profileName"
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:ems="10"
        android:inputType="textPersonName"
        tools:ignore="SpeakableTextPresentCheck"
        android:layout_marginTop="10dp"/>

    <EditText
        android:id="@+id/profileEmail"
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        tools:ignore="SpeakableTextPresentCheck"
        android:layout_marginTop="10dp"/>

    <EditText
        android:id="@+id/editTextPhone"
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:inputType="phone"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/updateProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/update_profile"
        android:layout_marginTop="10dp"/>

    <Button
        android:id="@+id/ReportAnIssue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/report_an_issue"
        />

    <Button
        android:id="@+id/logOutButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/log_out"
        android:layout_marginTop="80dp"/>

    <TextView
        android:id="@+id/supportText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/support_reposenergy_com"
        android:textSize="20sp"/>
</LinearLayout>